--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8888
-spring.cloud.config.server.git.uri=file://${user.home}/Dev/Projects/MicroServices/BoardGameLibrary/config-repo
+spring.cloud.config.server.git.uri=https://github.com/JLEFE1/BoardGameLibrary/tree/master/config-repo/
