--- a/users-microservice/Dockerfile
+++ b/users-microservice/Dockerfile
@@ -9,13 +9,15 @@ VOLUME /tmp
 # This step is optional for the simple app that we wrote here, but can be necessary for
 # other Spring Boot applications if they need to actually write in the filesystem.
 
-ADD /target/user-service-0.0.1-SNAPSHOT.jar app.jar
+ADD /target/users-microservice-0.0.1-SNAPSHOT.jar app.jar
 
 RUN sh -c 'touch /app.jar'
 # NOTE: You can use a RUN command to "touch" the jar file so that it has a file modification
 # time (Docker creates all container files in an "unmodified" state by default).
 # This actually isn’t important for the simple app that we wrote, but any static
 # content (e.g. "index.html") would require the file to have a modification time.
+
+EXPOSE 9000
 
 # NOTE: To reduce Tomcat startup time we added a system property pointing
 # to "/dev/urandom" as a source of entropy.
@@ -26,4 +28,3 @@ RUN sh -c 'touch /app.jar'
 #ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=prod","-jar","/app.jar"]
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 
-EXPOSE 8000
