--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,6 @@ services:
     image: users-microservice
     ports:
       - "9000:9000"
-    links:
+    depends_on:
       - discovery
       - configserver
